--- a/.github/workflows/drupal_ci.yml
+++ b/.github/workflows/drupal_ci.yml
@@ -15,6 +15,8 @@ jobs:
         uses: actions/checkout@v1
       - name: Install DDEV
         uses: ddev/github-action-setup-ddev@v1
+      - name: Set execute permission for Drush
+        run: chmod +x /var/www/html/vendor/bin/drush
       - name: Build the website
         run: ddev build
       - name: Run YAML linter test
