ci changes with lint specific

--- a/.github/workflows/drupal_ci.yml
+++ b/.github/workflows/drupal_ci.yml
@@ -18,5 +18,7 @@ jobs:
 
       - name: Build the website
         run: ddev build
-      - name: Run YAML linter test
-        run: yamllint .
+
+      - name: Lint Modified YAML Files
+        run: |
+          git diff --name-only ${{ github.sha }} ${{ github.event.before }} | grep '\.yml$' | xargs yamllint
