--- a/.github/workflows/drupal_ci.yml
+++ b/.github/workflows/drupal_ci.yml
@@ -24,7 +24,7 @@ jobs:
           FILES=$(git diff --name-only ${{ github.sha }} ${{ github.event.before }} | grep '\.yml$')
           if [ -n "$FILES" ]; then
             echo "Linting: $FILES"
-            echo "$FILES" | xargs yamllint
+            # echo "$FILES" | xargs yamllint
             yamllint $FILES || true
           else
             echo "No YAML files to lint"
